--- a/piPlate.service
+++ b/piPlate.service
@@ -4,8 +4,8 @@ After=network.target systemd-networkd-wait-online.service
 
 [Service]
 Type=Simple
-ExecStart=/home/dsmith/Scripts/LCD/piPlate.py --start 1
-ExecStop=/home/dsmith/Scripts/LCD/piPlate.py --stop 0
+ExecStart=/home/dsmith/Scripts/LCD/piPlate.py --start
+ExecStop=/home/dsmith/Scripts/LCD/piPlate.py --stop
 
 [Install]
 WantedBy=multi-user.target
